# float_api

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_and_publish.yaml  lint.yaml  publish_to_pip.yaml
float_api/: __init__.py  float_api.py
tests/: requirements.txt  test_float_api.py
tests/cassettes/test_float_api/: test_client.yaml  test_create_get_delete[create_client-None-delete_client-get_client-keys0-client_id].yaml  test_create_get_delete[create_project-None-delete_project-get_project-keys1-project_id].yaml  test_department.yaml  test_get_all[get_all_accounts-keys0].yaml  test_get_all[get_all_clients-keys1].yaml  test_get_all[get_all_departments-keys2].yaml  test_get_all[get_all_milestones-keys6].yaml  test_get_all[get_all_people-keys3].yaml  test_get_all[get_all_projects-keys4].yaml  test_get_all[get_all_tasks-keys5].yaml  test_holiday.yaml  test_milestones.yaml  test_people_reports.yaml  test_person.yaml  test_phase.yaml  test_project.yaml  test_project_reports.yaml  test_task.yaml  test_timeoff.yaml  test_timeoff_type.yaml
