[metadata]
name = float_api
version = $$REPLACE_IN_WORKFLOW$$
author = Tobias Balle-Petersen
author_email = tobiasbp@gmail.com
description = A wrapper for the API at float.com
keywords = Float api wrapper client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiasbp/float_api
project_urls =
    Bug Tracker = https://github.com/tobiasbp/float_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = float_api
packages = find:
python_requires = >=3.7
install_requires =
  requests
  urllib3>=1.26,<3

[options.packages.find]
where = float_api